--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,12 +62,7 @@
                     <% } else { %>
                         <li class="nav-item"><a class="nav-link" href="login">Login</a></li>
                     <% } %>
-                    <li class="nav-item cart-icon">
-                        <a class="nav-link" href="carrinho">
-                            <i class="fas fa-shopping-cart"></i>
-                            <span class="badge bg-danger">0</span>
-                        </a>
-                    </li>
+
                 </ul>
             </div>
         </div>
@@ -143,7 +138,9 @@
                                 <p class="card-main">R$ <%= product.price %></p>
                                 <p class="card-text">Quantidade: <%= product.stock %></p>
                                 <a href="/carrinho/adicionar/<%=product.id%>"><button class="btn btn-main">Comprar</button></a>
-                                <i class="far fa-heart remove-favorite" title="Remover dos Favoritos"></i>
+                                <% if (user) { %>
+                                    <i class="far fa-heart remove-favorite" title="Remover dos Favoritos"><a href="/favoritos/adicionar/<%=product.id%>"></a></i>
+                                <% } %>
                             </div>
                         </div>
                     </div>
