--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -169,7 +169,7 @@
                             <h5 class="mt-3"><%= favorito.nome %></h5>
                             <p class="text-main">R$ <%= favorito.preco %></p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <a href="carrinho.html" class="btn btn-main">Comprar</a>
+                                <a href="/carrinho/adicionar/"favorito.Product.productId class="btn btn-main">Comprar</a>
                                 <form action="/favoritos/remover/<%= favorito.id %>" method="POST" class="d-inline">
                                     <input type="hidden" name="produtoId" value="<%= favorito.id %>">
                                     <button type="submit" class="remove-favorite btn btn-link">
