--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -111,7 +111,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="/cadastro">Cadastro</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/login">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -142,7 +142,7 @@
                 <p>
                     <%= mensagem %>
                 </p>
-                <p class="text-center mt-3">Já tem uma conta? <a href="/">Faça login</a>.</p>
+                <p class="text-center mt-3">Já tem uma conta? <a href="/login">Faça login</a>.</p>
             </form>
         </div>
     </div>
