--- a/views/carrinho.ejs
+++ b/views/carrinho.ejs
@@ -180,7 +180,7 @@
                                 <div class="text-end">
                                     <h4 id="total">Total: R$ <%= (Number(total) || 0).toFixed(2) %>
                                     </h4>
-                                    <a href="#" class="btn btn-primary">Finalizar Compra</a>
+                                    <a href="pagamento" class="btn btn-primary">Finalizar Compra</a>
                                 </div>
                                 <% } %>
             </tbody>
