--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
         }
 
 
-        .remove-favorite {
+        .favorite {
             font-size: 1.7rem;
             padding: 20px;
             position: absolute;
@@ -138,9 +138,7 @@
                                 <p class="card-main">R$ <%= product.price %></p>
                                 <p class="card-text">Quantidade: <%= product.stock %></p>
                                 <a href="/carrinho/adicionar/<%=product.id%>"><button class="btn btn-main">Comprar</button></a>
-                                <% if (user) { %>
-                                    <i class="far fa-heart remove-favorite" title="Remover dos Favoritos"><a href="/favoritos/adicionar/<%=product.id%>"></a></i>
-                                <% } %>
+                                <a href="/favoritos/adicionar/<%=product.id%>"><i class="far fa-heart favorite" title="Favoritos"></i></a>
                             </div>
                         </div>
                     </div>
