--- a/views/login.ejs
+++ b/views/login.ejs
@@ -107,7 +107,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="user/cadastro">Cadastro</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cadastro">Cadastro</a></li>
                 </ul>
             </div>
         </div>
