--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,7 +113,6 @@
         }
     </style>
 </head>
-
 <body>
 
     <!-- Navbar -->
@@ -138,7 +136,7 @@
                     </li>
                     <li class="nav-item cart-icon">
                         <a class="nav-link" href="carrinho">
-                            <i class="fas fa-shopping-cart"></i>
+                            <i class="fas fa-heart"></i>
                             <span class="badge bg-danger">
                                 <%= favoritos ? favoritos.length : 0 %>
                             </span>
@@ -181,9 +179,9 @@
                                         <p>Produto não encontrado.</p>
                                         <% } %>
                                             <div class="d-flex justify-content-between align-items-center">
-                                                <a href="/carrinho/adicionar/<%= favorito.Product.id %>"
+                                                <a href="/carrinho/adicionar/<%= favorito.productId %>"
                                                     class="btn btn-main">Comprar</a>
-                                                <form action="/favoritos/remover/<%= favorito.Product.id %>" method="POST"
+                                                <form action="/favoritos/remover/<%= favorito.productId %>"
                                                     class="d-inline">
                                                     <input type="hidden" name="produtoId" value="<%= favorito.id %>">
                                                     <button type="submit" class="remove-favorite btn btn-link">
@@ -207,5 +205,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
