--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -113,6 +114,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <!-- Navbar -->
@@ -177,12 +179,10 @@
                                     </p>
                                     <% } else { %>
                                         <p>Produto não encontrado.</p>
-                                        <% } %>
+                                        <% } %> <!-- <a href="/favoritos/remover/<%= item.id %><i class="fas fa-heart"></i></a>" -->
                                             <div class="d-flex justify-content-between align-items-center">
-                                                <a href="/carrinho/adicionar/<%= favorito.productId %>"
-                                                    class="btn btn-main">Comprar</a>
-                                                <form action="/favoritos/remover/<%= favorito.productId %>"
-                                                    class="d-inline">
+                                                <a href="/carrinho/adicionar/<%= favorito.productId %>" class="btn btn-main">Comprar</a>
+                                                <form action="/favoritos/remover/<%= favorito.productId %>" class="d-inline">
                                                     <input type="hidden" name="produtoId" value="<%= favorito.id %>">
                                                     <button type="submit" class="remove-favorite btn btn-link">
                                                         <i class="fas fa-heart"></i> Remover
@@ -205,4 +205,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
